--- a/BookingReview/wwwroot/css/site.css
+++ b/BookingReview/wwwroot/css/site.css
@@ -101,3 +101,144 @@ body {
     font-weight: 500;
     line-height: normal;
 }
+
+.custom-text-area {
+    height: 116px !important;
+    border: 1px solid #DADADA;
+    resize: none !important;
+}
+
+.custom-button {
+    color: #FFF !important;
+    font-size: 20px !important;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    background: #0C949A;
+    border-radius: unset !important;
+    height: 55px;
+    width: 285px;
+}
+
+.custom-button:focus {
+    box-shadow: none !important;
+}
+
+.my-close-button-class:focus {
+    box-shadow: none !important;
+}
+
+.error {
+    border: 1px solid red;
+}
+
+.error-message {
+    color: red;
+    font-size: 12px;
+    margin-top: 5px;
+}
+
+.active-review {
+    background: #FFF !important;
+}
+
+.active-review p {
+    color: #000 !important;
+}
+
+.active-review svg path {
+    fill: #000 !important;
+}
+
+.card-bad-review {
+    display: flex;
+    align-items: center;
+    height: 99px;
+    gap: 16px;
+    color: #000;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    border: 1px solid #FFF;
+    background: #FFF;
+}
+
+.check-box-label {
+    display: flex;
+    align-items: center;
+    color: #000;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-align: initial;
+}
+
+.custom-check-box {
+    min-width: 20px !important;
+    min-height: 20px !important;
+}
+
+#loader {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    z-index: 1000;
+    width: 120px;
+    height: 120px;
+    margin: -76px 0 0 -76px;
+    border: 16px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 16px solid #3498db;
+    -webkit-animation: spin 2s linear infinite;
+    animation: spin 2s linear infinite;
+    display: none;
+}
+
+@-webkit-keyframes spin {
+    0% { -webkit-transform: rotate(0deg); }
+    100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+/* Add animation to "page content" */
+.animate-bottom {
+    position: relative;
+    -webkit-animation-name: animatebottom;
+    -webkit-animation-duration: 1s;
+    animation-name: animatebottom;
+    animation-duration: 1s
+}
+
+@-webkit-keyframes animatebottom {
+    from { bottom:-100px; opacity:0 }
+    to { bottom:0px; opacity:1 }
+}
+
+@keyframes animatebottom {
+    from{ bottom:-100px; opacity:0 }
+    to{ bottom:0; opacity:1 }
+}
+
+#overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 999;
+    display: none;
+}
+
+h1 > p {
+    color: #0C949A;
+    font-size: 80px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
