--- a/BookingReview/Views/Shared/_Layout.cshtml
+++ b/BookingReview/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewData["Title"]</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="~/lib/css/sweetalert2.min.css"/>
+    <link rel="stylesheet" href="~/lib/css/jquery.ml-keyboard.css"/>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/BookingReview.styles.css" asp-append-version="true"/>
 </head>
@@ -35,6 +36,7 @@
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/lib/sweetalert2.all.min.js"></script>
+<script src="~/lib/jquery.ml-keyboard.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
 @await RenderSectionAsync("Scripts", required: false)
 </body>
