--- a/BookingReview/wwwroot/css/site.css
+++ b/BookingReview/wwwroot/css/site.css
@@ -242,3 +242,20 @@ h1 > p {
     font-weight: 400;
     line-height: normal;
 }
+
+/*#mlkeyboard {*/
+/*    !*height: 245px !important;*!*/
+/*}*/
+
+/*#mlkeyboard ul {*/
+/*    width: 1140px !important;*/
+/*    height: 415px !important;*/
+/*    border-radius: unset !important;*/
+/*    font-size: 15px;*/
+/*}*/
+
+/*#mlkeyboard ul li {*/
+/*    height: 75px !important;*/
+/*    width: 75px !important;*/
+/*    border-radius: unset !important;*/
+/*}*/
