--- a/BookingReview/Views/Shared/_Layout.cshtml
+++ b/BookingReview/Views/Shared/_Layout.cshtml
@@ -28,6 +28,8 @@
 <div class="container mt-5 mb-5">
     <div id="loader"></div>
     <div id="overlay"></div>
+    <div id="alert" class="alert alert-danger alert-dismissible fade show text-center" role="alert">
+    </div>
     <main role="main" class="pb-3">
         @RenderBody()
     </main>
