--- a/BookingReview/Views/Home/Index.cshtml
+++ b/BookingReview/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
             </div>
         </div>
     
-        <div class="col-sm-4 mx-auto p-0">
+        <div class="col-sm-4 mx-auto p-0" style="width: 440px !important;">
             <input data-kioskboard-specialcharacters="true" autocomplete="off" id="talon" type="text" style="text-transform: uppercase" class="form-control number-talon text-center custom-input-gns validate-input talon-keyboard"/>
         </div>
     </div>
