--- a/BookingReview/wwwroot/css/site.css
+++ b/BookingReview/wwwroot/css/site.css
@@ -62,6 +62,7 @@ body {
     font-style: normal;
     font-weight: 500;
     line-height: normal;
+    width: 440px !important;
 }
 
 .number-talon {
