Added page for generating reports Added fixes with styles

--- a/BookingReview/Views/Home/Index.cshtml
+++ b/BookingReview/Views/Home/Index.cshtml
@@ -86,7 +86,7 @@
             </div>
         </div>
     
-        <div class="col-12">
+        <div class="col-12 mt-3">
             <div class="d-flex justify-content-center">
                 <button class="btn custom-button" id="validateButton">Отправить отзыв</button>
             </div>
@@ -122,6 +122,11 @@
                                                <div class="col-6 mb-4">
                                                    <div class="card-bad-review p-4 text-center" data-value="Некомпетентный сотрудник">
                                                        <p>Некомпетентный сотрудник</p>
+                                                   </div>
+                                               </div>
+                                                <div class="col-6 mb-4">
+                                                   <div class="card-bad-review p-4 text-center" data-value="Не работает база">
+                                                       <p>Не работает база</p>
                                                    </div>
                                                </div>
                                                <div class="col-6 mb-4">
