--- a/BookingReview/Views/Shared/_Layout.cshtml
+++ b/BookingReview/Views/Shared/_Layout.cshtml
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="~/lib/css/sweetalert2.min.css"/>
     <link rel="stylesheet" href="~/lib/css/kioskboard-2.3.0.min.css"/>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
-    <link rel="stylesheet" href="~/BookingReview.styles.css" asp-append-version="true"/>
 </head>
 <body>
 <header>
@@ -40,6 +39,7 @@
 <script src="~/lib/sweetalert2.all.min.js"></script>
 <script src="~/lib/kioskboard-2.3.0.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
+<script src="~/js/kioskbar-custom.js" asp-append-version="true"></script>
 @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
