--- a/BookingReview/Views/Export/Index.cshtml
+++ b/BookingReview/Views/Export/Index.cshtml
@@ -149,7 +149,7 @@
            let fromDate = $("#from").val();
            let toDate = $("#to").val();
            
-           if (fromDate || toDate){
+           if (fromDate && toDate){
                let serviceId = $("#service").val();
                let userId = $("#worker").val();
                
@@ -183,7 +183,7 @@
                   }
              });        
            }else{
-            dangerAlert("Пожалуйста выберите дату от либо до!")   
+            dangerAlert("Пожалуйста выберите дату от и до!")   
            }           
         });
     });
@@ -200,7 +200,7 @@
         let fromDate = $("#from").val();
         let toDate = $("#to").val();
     
-        if (fromDate || toDate) {
+        if (fromDate && toDate) {
             let serviceId = $("#service").val();
             let userId = $("#worker").val();
     
@@ -228,7 +228,7 @@
             // Open a new tab or window with the URL
             window.open(url, '_blank');
         } else {
-            dangerAlert("Пожалуйста выберите дату от либо до!");
+            dangerAlert("Пожалуйста выберите дату от и до!");
         }
     }
 
